--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -76,9 +76,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">기다리고 있었습니다</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">김종석. 대학생. 프로필페이지. 성공적</span>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>어떤 사람인가</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -170,10 +170,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>김종석의 프로필 페이지입니다.</p>
+                    <p>부트스트랩으로 만들어본 프로필페이지입니다.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>추후 수정 예정입니다.</p>
+                    <p>계속해서 업데이트 중입니다.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
